# TransazioniBancarie

./: CMakeLists.txt  README.md  main.cpp  test_transazioni.cpp
Data/: transazioni.txt
